fix(ui) : break long word in admin bdd search, fix overflow ng-multi… (#120)

--- a/chutney/ui/src/assets/style/global/_select.scss
+++ b/chutney/ui/src/assets/style/global/_select.scss
@@ -39,6 +39,17 @@ $base-color: var(--bs-primary) !important;
     }
 }
 
+ng-multiselect-dropdown .multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
+    display: flex;
+    span {
+        text-overflow: ellipsis;
+        display: block;
+        overflow: hidden;
+    }
+}
 
 
-
+ng-multiselect-dropdown .multiselect-dropdown .dropdown-list {
+    width: auto;
+    min-width: 100%
+}
