--- a/chutney/ui/src/app/modules/campaign/components/create-campaign/campaign-edition.component.scss
+++ b/chutney/ui/src/app/modules/campaign/components/create-campaign/campaign-edition.component.scss
@@ -100,12 +100,3 @@ fieldset legend {
     min-width:200px;
     display: inline-block;
 }
-
-::ng-deep ng-multiselect-dropdown .multiselect-dropdown .dropdown-btn .selected-item-container .selected-item {
-    display: flex;
-    span {
-        text-overflow: ellipsis;
-        display: block;
-        overflow: hidden;
-    }
-}
